test/TestPhases/typechecker/invalid/NoMagicCasting1.blc
module

function noMagicCasting()

    var a: int16 = -128

    var c: int8 = a
end
